--- a/less/about-page.less
+++ b/less/about-page.less
@@ -14,6 +14,7 @@
         @media @phone{
             font-size: 2rem;
             width: 100%;
+            padding-left: 0%;
         }
         
     }
